Style.css fixed

--- a/style.css
+++ b/style.css
@@ -3,331 +3,561 @@
 *,
 *::before,
 *::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 :root {
-	--logo: rgb(25, 195, 125);
-	--text: #212122;
-	--primary: #8e8ea0;
-	--secondary: #edecf0;
-	--tertiary: #212122;
-	--background: #fffefe;
-	--border-radius: 0.77rem;
-	--padding: 0.38rem;
-	--transition: all 0.2s ease-in-out;
-	--font-family: "Poppins", sans-serif;
+  --logo: crimson;
+  /* --logo: rgb(25, 195, 125); */
+  --text: #40414f;
+  --primary: #8e8ea0;
+  --secondary: #edecf0;
+  --tertiary: #202123;
+  --background: #fffefe;
+  --border-radius: 0.77rem;
+  --padding: 0.38rem;
+  --transition: all 0.2s ease-in-out;
+  --font-family: "Poppins", sans-serif;
 }
 
 html,
 body {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .wrapper {
-	width: 100%;
-	height: 100%;
-	font-family: var(--font-family);
-	background-color: var(--background);
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-family: var(--font-family);
+  background-color: var(--background);
+  overflow-x: hidden;
 }
 .sidebar {
-	width: 16rem;
-	height: 100vh;
-	position: fixed !important;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	background-color: var(--tertiary);
-	padding: 0.5rem;
+  width: 16rem;
+  height: 100vh;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--background);
+  background-color: var(--tertiary);
+  padding: var(--padding);
+  z-index: 1;
 }
 .sidebar .header {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	gap: 0.5rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 .sidebar .header button {
-	display: flex;
-	align-items: center;
-	padding: 1rem;
-	cursor: pointer;
-	color: var(--background);
-	background-color: transparent;
-	border: 0.1rem solid rgba(114, 114, 114, 0.7);
-	border-radius: 0.4rem;
-	height: 2.8rem;
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  cursor: pointer;
+  color: var(--background);
+  background-color: transparent;
+  border: 0.1rem solid var(--primary);
+  border-radius: 0.4rem;
+  height: 2.8rem;
 }
 .sidebar .header button:hover {
-	transition: var(--transition);
-	background-color: rgba(255, 255, 255, 0.055);
+  transition: var(--transition);
+  background-color: rgba(255, 255, 255, 0.055);
 }
 .sidebar .header .new_chat {
-	justify-content: flex-start;
-	width: 100%;
-	font-family: var(--font-family);
+  justify-content: flex-start;
+  width: 100%;
+  font-family: var(--font-family);
+  gap: 0.5rem;
 }
 .sidebar .header .new_chat i {
-	font-size: 1.1rem;
-	margin-right: var(--padding);
+  font-size: 1.1rem;
 }
 .sidebar .header .new_chat p {
-	font-size: 0.9rem;
+  font-size: 1rem;
+  text-align: left;
 }
-.sidebar .header .sidebar_btn {
-	justify-content: center;
-	width: 18%;
-	font-family: var(--font-family);
+.sidebar .header .sidebar_hide {
+  justify-content: center;
+  width: 18%;
+  font-family: var(--font-family);
 }
-.sidebar .header .sidebar_btn i {
-	font-size: 1.1rem;
+.sidebar .header .sidebar_hide i,
+.sidebar_show i {
+  font-size: 1.1rem;
+}
+.sidebar_show {
+  width: 2.3rem;
+  height: 2.3rem;
+  top: 0;
+  left: 0;
+  margin: 0.5rem 0 0 0.5rem;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  color: var(--text);
+  background-color: transparent;
+  border: 0.1rem solid var(--primary);
+  border-radius: 0.4rem;
+  justify-content: center;
+  font-family: var(--font-family);
+}
+.sidebar_show:hover {
+  transition: var(--transition);
+  background-color: rgba(0, 0, 0, 0.055);
+}
+.sidebar .middle {
+  overflow: auto;
+  width: 16rem;
+  height: 35rem;
+  padding: var(--padding);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.sidebar .middle button {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-family: var(--font-family);
+  padding: 1rem;
+  width: 100%;
+  height: 2.8rem;
+  gap: 0.5rem;
+  cursor: pointer;
+  color: var(--background);
+  border-radius: 0.4rem;
+  background-color: transparent;
+  border: none;
+}
+.sidebar .middle button:hover {
+  transition: var(--transition);
+  background-color: rgba(255, 255, 255, 0.055);
+}
+.sidebar .middle button i {
+  font-size: 1.1rem;
+  margin-right: var(--padding);
+}
+.sidebar .middle button p {
+  font-size: 0.9rem;
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .sidebar .footer {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	bottom: 0;
-	gap: 1.3rem;
-	color: var(--background);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  bottom: 0;
+  border: none;
+  border-top: 0.1rem solid var(--primary);
+}
+.sidebar .footer .theme_btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 5.7rem;
+}
+.theme_btn .left {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1.2rem;
 }
 .sidebar .footer .delete_chat {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	width: 100%;
-	gap: 0.5rem;
-	padding: 1rem;
-	cursor: pointer;
-	color: var(--background);
-	background-color: transparent;
-	border: 0.1rem solid rgba(114, 114, 114, 0.7);
-	border-radius: 0.4rem;
-	height: 2.8rem;
-	font-family: var(--font-family);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1.2rem;
 }
-.sidebar .footer .delete_chat:hover {
-	transition: var(--transition);
-	background-color: rgba(255, 255, 255, 0.055);
+.sidebar .footer .delete_chat,
+.sidebar .footer .theme_btn {
+  width: 100%;
+  padding: 0 1rem;
+  cursor: pointer;
+  color: var(--background);
+  background-color: transparent;
+  border: none;
+  margin-top: 0.2rem;
+  border-radius: 0.4rem;
+  height: 2.8rem;
+  font-family: var(--font-family);
 }
-.sidebar .footer .delete_chat p {
-	font-size: 0.9rem;
+.sidebar .footer .delete_chat p,
+.sidebar .footer .theme_btn p {
+  font-size: 1rem;
 }
-.sidebar .footer .delete_chat i {
-	font-size: 1.1rem;
+.sidebar .footer .delete_chat i,
+.sidebar .footer .theme_btn i {
+  font-size: 1.1rem;
+}
+.sidebar .footer .delete_chat:hover,
+.sidebar .footer .theme_btn:hover {
+  transition: var(--transition);
+  background-color: rgba(255, 255, 255, 0.055);
 }
 .sidebar .footer .user_data {
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	color: var(--background);
-	margin-bottom: 0.5rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  color: var(--background);
+  gap: 2rem;
+  margin: 0.7rem 0 0.5rem 0;
 }
 .sidebar .footer .user {
-	display: flex;
-	align-items: center;
-	gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
 }
 .sidebar .footer .user img {
-	width: 2.1rem;
-	height: 2.1rem;
-	border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  margin-left: 0.5rem;
+}
+.sidebar .footer .user p {
+  color: var(--background);
+  font-size: 1rem;
 }
 .sidebar .footer .user_data i {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 1.1rem;
-	height: 2rem;
-	width: 2rem;
-	background-color: transparent;
-	border-radius: 50%;
-	cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.1rem;
+  height: 2rem;
+  width: 2rem;
+  background-color: transparent;
+  border-radius: 50%;
+  cursor: pointer;
 }
 .sidebar .footer .user_data i:hover {
-	transition: var(--transition);
-	background-color: rgba(255, 255, 255, 0.055);
+  transition: var(--transition);
+  background-color: rgba(255, 255, 255, 0.055);
 }
 .main {
-	width: calc(100% - 16rem);
-	height: 100vh;
-	margin-left: 16rem;
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-start;
-	background-color: var(--background);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: var(--background);
 }
 .main .logo {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin: 4rem 0 4rem 0;
-	gap: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 3.5rem 0 3.5rem 0;
+  gap: 0.5rem;
+  text-decoration: none;
 }
 .logo svg {
-	width: 4rem;
-	height: 4rem;
-	border-radius: 50%;
-	color: #fff;
-	padding: 0.5rem;
-	background-color: var(--logo);
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  color: #fff;
+  padding: 0.5rem;
+  background-color: var(--logo);
 }
-.logo p {
-	font-size: 2.3rem;
-	font-weight: 700;
-	color: var(--text);
+.logo:hover svg {
+  animation: spin 1.2s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.logo h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: var(--text);
 }
 .main .box_container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 1rem;
-	width: inherit;
-	position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  width: 100%;
+  position: relative;
 }
 .box_container .box {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	padding: 0.7rem;
-	background: transparent;
-	border-radius: var(--border-radius);
+  width: 20rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem;
+  background: transparent;
+  border-radius: var(--border-radius);
 }
 .box .heading {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .heading i {
-	font-size: 2.5rem;
-	margin-top: 2rem;
-	color: var(--primary);
-}
-.box:hover .heading i {
-	transition: var(--transition);
-	color: var(--logo);
+  font-size: 2.5rem;
+  color: var(--primary);
 }
 .heading p {
-	font-size: 1.3rem;
-	font-weight: 400;
-	margin-bottom: 1rem;
-	color: var(--primary);
+  font-size: 1.3rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  color: var(--primary);
+}
+.box:hover .heading i,
+.box:hover .heading p {
+  transition: var(--transition);
+  color: var(--text);
 }
 .box .elements {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: center;
+  width: 18rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
 .elements .element {
-	margin: 0.38rem 0;
-	padding: 0.68rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 1rem;
-	background-color: var(--secondary);
-	border-radius: var(--border-radius);
+  margin: 0.38rem 0;
+  padding: 0.68rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background-color: var(--secondary);
+  border-radius: var(--border-radius);
 }
 .box:nth-child(1) .elements .element {
-	cursor: pointer;
+  cursor: pointer;
 }
 .elements .element:hover {
-	outline: 0.1rem solid var(--primary);
+  outline: 0.1rem solid var(--primary);
 }
 .elements .element p {
-	font-weight: 400;
-	color: var(--primary);
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--text);
 }
 .element i {
-	font-size: 1.1rem;
-	color: var(--primary);
+  font-size: 1.1rem;
+  color: var(--text);
 }
 .main .footer {
-	width: 55rem;
-	position: fixed;
-	bottom: 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
-	margin-bottom: 0.5rem;
-	gap: 0.5rem;
+  width: 60vw;
+  height: auto;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.3rem;
+  padding-top: 5rem;
 }
 .main .footer .ftop {
-	width: 100%;
-	height: auto;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	gap: 0.5rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  gap: 0.5rem;
 }
 .ftop .left {
-	width: inherit;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+  width: inherit;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 .ftop .left textarea {
-	width: inherit;
-	border: 0.1rem solid rgba(114, 114, 114, 0.7);
-	border-radius: var(--border-radius);
-	height: 3.7rem;
-	max-height: 10rem;
-	padding: 1rem 5rem 1rem 1rem;
-	color: var(--text);
-	font-size: 1.1rem;
-	font-family: var(--font-family);
-	resize: none !important;
+  overflow-x: hidden;
+  width: inherit;
+  height: 3.5rem;
+  max-height: 12rem;
+  padding: var(--padding);
+  border-radius: var(--border-radius);
+  color: var(--tertiary);
+  font-size: 1.1rem;
+  font-family: var(--font-family);
+  resize: none !important;
+  background-color: var(--background);
+  border: 0.1rem solid var(--primary);
 }
 .ftop .left textarea:focus {
-	outline-color: var(--logo);
+  outline-color: var(--logo);
+}
+.ftop .left textarea::placeholder {
+  color: var(--text);
 }
 .ftop .left button {
-	width: inherit;
-	color: var(--background);
-	background-color: var(--primary);
-	width: 4rem;
-	height: 2.5rem;
-	font-size: 1.1rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: calc(var(--border-radius) - 0.13rem);
-	border: none;
-	position: absolute;
-	margin-right: 0.7rem;
-	font-family: var(--font-family);
-	transition: var(--transition);
-	cursor: pointer;
+  width: inherit;
+  color: var(--background);
+  background-color: var(--primary);
+  width: 4rem;
+  height: 2.5rem;
+  font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: calc(var(--border-radius) - 0.13rem);
+  border: none;
+  position: absolute;
+  margin: var(--padding);
+  font-family: var(--font-family);
+  transition: var(--transition);
+  cursor: pointer;
 }
 .ftop .left button:hover {
-	background-color: var(--logo);
+  background-color: var(--logo);
 }
 .ftop i {
-	display: flex;
-	align-items: center;
-	padding: 1rem;
-	font-size: 1.6rem;
-	width: 3.7rem;
-	height: 3.7rem;
-	cursor: pointer;
-	color: var(--background);
-	background-color: var(--logo);
-	border-radius: 50%;
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  font-size: 1.6rem;
+  width: 3.7rem;
+  height: 3.7rem;
+  cursor: pointer;
+  color: var(--background);
+  background-color: var(--logo);
+  border-radius: 50%;
+}
+.main .footer .copyright {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .main .footer .copyright p {
-	color: var(--primary);
+  color: var(--text);
+  font-size: 0.8rem;
 }
 .main .footer .copyright span {
-	color: var(--logo);
-	cursor: pointer;
+  color: var(--logo);
+  cursor: pointer;
+  animation: heartbeat 1s infinite;
+}
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* ---------------------Responsiveness------------------------------------------------- */
+@media (max-width: 1260px) {
+  .box_container .box {
+    width: 16rem;
+  }
+  .box .elements {
+    width: 14rem;
+  }
+}
+@media (max-width: 1075px) {
+  .box_container .box {
+    width: 14rem;
+  }
+  .box .elements {
+    width: 12rem;
+  }
+}
+@media (max-width: 970px) {
+  .main .box_container {
+    flex-direction: column;
+  }
+  .box_container .box {
+    width: 25.6rem;
+    margin-top: 14rem;
+  }
+  .box_container .box .heading {
+    display: none;
+  }
+  .box:nth-child(2),
+  .box:nth-child(3) {
+    display: none;
+  }
+  .box .elements {
+    width: 25.6rem;
+  }
+}
+@media (max-width: 680px) {
+  .box_container .box {
+    width: 20rem;
+    margin-top: 12rem;
+  }
+  .box_container .box .heading {
+    display: none;
+  }
+  .box:nth-child(2),
+  .box:nth-child(3) {
+    display: none;
+  }
+  .box .elements {
+    width: 20rem;
+  }
+  .sidebar,
+  .sidebar_show {
+    display: none;
+  }
+}
+@media (max-width: 590px) {
+  .sidebar {
+    display: none;
+  }
+}
+@media (max-width: 495px) {
+  .copyright p,
+  .copyright span {
+    font-size: 0.9rem;
+  }
+}
+@media (max-width: 450px) {
+  .copyright p,
+  .copyright span {
+    font-size: 0.8rem;
+  }
+  .copyright {
+    width: 100vw;
+  }
+}
+@media (max-width: 430px) {
+  .box_container .box {
+    margin-top: 12rem;
+  }
+  .box .elements {
+    width: 18rem;
+  }
+  .sidebar {
+    display: none;
+  }
+}
+@media (max-width: 300px) {
+  .box_container .box {
+    margin-top: 8rem;
+  }
+  .box .elements {
+    width: 15rem;
+  }
 }
